# demo-services

./: .gitlab-ci.yml  README.md
client-server/client/: CMakeLists.txt
client-server/client/meta/: config.yaml
client-server/client/src/: main.cpp
client-server/server/: CMakeLists.txt
client-server/server/meta/: config.yaml
client-server/server/src/: Server.cpp
client-server/server/src/handlers/: HTTPHandlerFactory.cpp  HTTPHandlerFactory.h  HealthCheck.cpp  HealthCheck.h
cpu_load/meta/: config.yaml
cpu_load/src/cpu_load/: cpu_load.py
demo_insurance/meta/: config.yaml
demo_insurance/src/telemetry_emulator/: __init__.py  config.py  control_api.py  emulator.py  emulator_rest.py  sender.py  sender_rest.py  sender_vis.py  sender_vis_genivi.py  window.py
demo_insurance/src/telemetry_emulator/genivi/: converter.py
gpio_blinky/: README.md
gpio_blinky/meta/: config.yaml
gpio_blinky/src/: blinky.py
hello_world/: CMakeLists.txt  README.md
hello_world/meta/: config.yaml
hello_world/src/: main.cpp
kuksa-test-client/: README.md
kuksa-test-client/meta/: config.yaml
kuksa-test-client/src/: kuksa_test_client.py
kuksa-test-client/src/etc/kuksa-val/: provide-all.token
matplot/meta/: config.yaml
matplot/src/: matplot.py
monkey_zephyr/meta/: config.yaml
preset/meta/: config.yaml
preset/src/: preset.py
ram_consumer/meta/: config.yaml
ram_consumer/src/ramservice/: ram_service.py
sqllite/meta/: config.yaml
sqllite/src/: sqllite.py
unikernel_pvcalls/meta/: config.yaml
video_device/meta/: config.yaml
video_device/src/: device.py
(+23 files in other folders)
